--- a/views/Tela-principal_BookGear.html
+++ b/views/Tela-principal_BookGear.html
@@ -147,17 +147,17 @@
         margin: auto;
         color: grey;
     }
-    
-        .input_categoria {
-            font-size: 15px;
-            border: none;
-            padding: 10px;
-            margin: 8px;
-            width: 220px;
-            transition: 0.6s ease;
-            background-color:rgb(24, 24, 24);
-            color: grey;
-        }
+
+    .input_categoria {
+        font-size: 15px;
+        border: none;
+        padding: 10px;
+        margin: 8px;
+        width: 220px;
+        transition: 0.6s ease;
+        background-color: rgb(24, 24, 24);
+        color: grey;
+    }
 
     .input_categoria:hover {
         background-color: #f85d03;
@@ -166,8 +166,6 @@
         cursor: pointer;
         color: black;
     }
-
-
 </style>
 
 <body>
@@ -182,7 +180,8 @@
                 <input type="text" placeholder="Pesquisar">
                 <a href="#" class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                         fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+                        <path
+                            d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
                     </svg></a>
             </div>
 
@@ -199,7 +198,7 @@
                 <ul>
                     <li><a href="#">LIVROS</a></li>
                     <li><a href="#">CAIXAS</a></li>
-                    <li><a href="#">CARRINHO</a></li>
+                    <li><a href="/carrinho">CARRINHO</a></li>
                     <li><a href="#">EDITORA</a></li>
                     <li><a href="#">WISHLIST</a></li>
                     <li><a href="#">AUTORES</a></li>
