--- a/views/cadastro.html
+++ b/views/cadastro.html
@@ -37,7 +37,7 @@
         }
 
         .Login {
-            color: #ff7300;
+            color: #f85d03;
             font: bold 30px sans-serif;
             margin-left: 135px;
         }
