--- a/views/carrinho.html
+++ b/views/carrinho.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../public/stylesheets/cabecalho.css">
-    <link rel="stylesheet" type="text/css" href="../public/stylesheets/barrapesquisa.css">
-    <link rel="stylesheet" type="text/css" href="../public/stylesheets/scrollbar.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/cabecalho.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/barrapesquisa.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/scrollbar.css">
     <title>Bookgear</title>
 </head>
 <style>
     body {
         background-color: rgb(20, 20, 20);
-        background-image: url(./../public/images/background2.jpg);
+        background-image: url(./../images/background2.jpg);
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: cover;
@@ -52,14 +52,17 @@
     .grid {
         background-color: rgba(255, 255, 255, 0);
         height: 500px;
-        width: 923px;
+        width: 908px;
         row-gap: 24px;
+        border-radius: 4px;
         justify-content: space-between;
         grid-template-columns: 900px;
         grid-auto-rows: 150px;
-        margin-right: 10px;
+        padding-right: 15px;
+    
         overflow: scroll;
         overflow-x: hidden;
+
     }
 
     .pesquisa {
@@ -111,7 +114,7 @@
     }
 
     .item {
-        color: grey;
+        color: rgb(179, 179, 179);
         display: grid;
         box-shadow: 0px 0px 3px rgb(42, 41, 43);
         background-color: rgba(42, 41, 43, 0.8);
@@ -153,7 +156,7 @@
         text-align: left;
         font-size: large;
         margin: auto;
-        color: grey;
+        color: rgb(179, 179, 179);
         grid-column: 2 / 3;
         white-space: normal;
     }
@@ -164,14 +167,14 @@
         font-size: larger;
         float: left;
         margin: auto;
-        color:whitesmoke;
+        color: whitesmoke;
         grid-column: 3 / 4;
 
     }
 
     .compra {
         width: 380px;
-        height: 330px;
+        height: 320px;
         background-color: rgba(42, 41, 43, 0.8);
         box-shadow: 0px 0px 3px rgb(42, 41, 43);
         border-radius: 4px;
@@ -179,18 +182,98 @@
         grid-row: 1 / 2;
         grid-column: 2 / 3;
     }
-    .preco{
+
+    .compra_cima {
+        display: flex;
+        width: 380px;
+        height: 80px;
+        justify-content: space-evenly;
+
+    }
+
+    .compra_div {
+        display: flex;
+        width: 380px;
+        height: 70px;
+        justify-content: space-evenly;
+    }
+
+    .subtotal {
+        display: flex;
+        flex-flow: column-reverse;
+        padding: 10px 10px;
+        width: 150px;
+        height: 60px;
+        font-size: 25px;
+        align-items: left;
+        color: rgb(179, 179, 179);
+
+    }
+
+    #val_sub {
+        display: flex;
+        flex-flow: column-reverse;
+        padding: 10px 10px;
+        width: 200px;
+        height: 60px;
+        font-size: 28px;
+        align-items: center;
+        color: rgb(255, 255, 255);
+    }
+/* 
+    .finalizar_compra {
+        width: 200px;
+        height: 80px;
+        font-size:xx-large;
+        border: none;
+        border-radius: 20px;
+        color: rgb(0, 0, 0);
+        background: #f85d03;
+        font-size: 12px;
+        font-weight: bolder;
+        margin: 15px 2px;
+        cursor: pointer;
+    }
+    .finalizar_compra:hover{
+        color: rgb(0, 0, 0);
+        background: #da5000;
+        cursor: pointer;
+    } */
+    .finalizar_compra {
+        width: 200px;
+        height: 40px;
+        border: none;
+        border-radius: 20px;
+        color: rgb(48, 48, 48);
+        background: #f85d03;
+        padding: 5px 20px;
+        text-align: center;
+        font-size: 12px;
+        font-weight:bold;
+        margin: 15px 2px;
+        cursor: pointer;
+    }
+
+    .finalizar_compra:hover {
+        color: #080808;
+        background: #da5000;
+        text-align: center;
+        cursor: pointer;
+    }
+
+    .preco {
         width: 175px;
         height: 30px;
         margin-top: 20px;
-        align-items:flex-end;
-        font-size: xx-large;
+        align-items: flex-end;
+        font-size: 28px;
 
     }
-    .estoque{
+
+    .estoque {
         margin: 10px;
         font-size: small;
-        color:springgreen;
+        color: springgreen;
     }
 </style>
 
@@ -200,8 +283,7 @@
 
         <div class="containermenu">
             <div class="logo">
-                <a href="#"><img class="logotipo" src="../public/images/Capturar-removebg-preview.png"
-                        alt="bookgear"></a>
+                <a href="#"><img class="logotipo" src="../images/Capturar-removebg-preview.png" alt="bookgear"></a>
             </div>
             <div class="search-box">
                 <input type="text" placeholder="Pesquisar">
@@ -214,9 +296,9 @@
 
 
             <div class="user">
-                <a href="Login-bookgear.html">
+                <a href="/Login">
                     <button type="url" class="botao">Entrar</button></a>
-                <a class="login" href="#">
+                <a class="login" href="/cadastro">
                     <button type="url" class="botao">Cadastrar</button></a>
             </div>
         </div>
@@ -239,63 +321,64 @@
         <div class="container grid">
 
             <div class="item">
-                <img class="imgbox" src="../public/images/box.jpg">
+                <img class="imgbox" src="../images/box.jpg">
                 <!-- nome/descrição do produto -->
-                <p class="descricao">Caixa da bookgear 4 livros, cases para livros, marca paginas personalizado, 3 suportes para livros.</p>
+                <p class="descricao">Caixa da bookgear 4 livros, cases para livros, marca paginas personalizado, 3
+                    suportes para livros.</p>
                 <div class="descricao2">
                     <!-- preço do produto -->
                     <div class="preco">R$: 90,00</div>
                     <div class="estoque">Em estoque</div>
-                    <button class="remove"type="url">Remover do carrinho</button></a>
+                    <button class="remove" type="url">Remover do carrinho</button></a>
                 </div>
             </div>
 
             <div class="item">
-                <img class="imgbox" src="../public/images/box.jpg">
+                <img class="imgbox" src="../images/box.jpg">
                 <!-- nome/descrição do produto -->
-                <p class="descricao">Lorem ipsum dolor sit amet consectetur 
-                    adipisicing elit. Earum enim, maxime cupiditate quisquam 
-                    consequatur reprehenderit repellat asperiores delectus ipsam, 
-                    eveniet repudiandae temporibus impedit, aut quis tenetur 
+                <p class="descricao">Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Earum enim, maxime cupiditate quisquam
+                    consequatur reprehenderit repellat asperiores delectus ipsam,
+                    eveniet repudiandae temporibus impedit, aut quis tenetur
                     facere nesciunt illum quibusdam?.</p>
                 <div class="descricao2">
                     <!-- preço do produto -->
                     <div class="preco">R$: 82,00</div>
                     <div class="estoque">Em estoque</div>
-                    <button class="remove"type="url">Remover do carrinho</button></a>
+                    <button class="remove" type="url">Remover do carrinho</button></a>
                 </div>
             </div>
             <div class="item">
-                <img class="imgbox" src="../public/images/box.jpg">
+                <img class="imgbox" src="../images/box.jpg">
                 <!-- nome/descrição do produto -->
-                <p class="descricao">Lorem ipsum dolor sit amet consectetur 
+                <p class="descricao">Lorem ipsum dolor sit amet consectetur
                     adipisicing elit. Officia ab a qui tempore eius nulla et,
-                     in ex fugiat autem. Nulla blanditiis aliquid, quae at 
-                     nostrum maiores qui quia est.</p>
+                    in ex fugiat autem. Nulla blanditiis aliquid, quae at
+                    nostrum maiores qui quia est.</p>
                 <div class="descricao2">
                     <!-- preço do produto -->
                     <div class="preco">R$: 90,00</div>
                     <div class="estoque">Em estoque</div>
-                    <button class="remove"type="url">Remover do carrinho</button></a>
+                    <button class="remove" type="url">Remover do carrinho</button></a>
                 </div>
             </div>
             <div class="item">
-                <img class="imgbox" src="../public/images/box.jpg">
+                <img class="imgbox" src="../images/box.jpg">
                 <!-- nome/descrição do produto -->
-                <p class="descricao">Caixa da bookgear 4 livros, cases para livros, 
-                    marca paginas personalizado, 3 suportes para livros, 4 livros, 
-                    cases para livros, marca paginas personalizado, 3 suportes para 
-                    livros 4 livros, cases para livros, marca paginas personalizado, 
+                <p class="descricao">Caixa da bookgear 4 livros, cases para livros,
+                    marca paginas personalizado, 3 suportes para livros, 4 livros,
+                    cases para livros, marca paginas personalizado, 3 suportes para
+                    livros 4 livros, cases para livros, marca paginas personalizado,
                     3 suportes para livros</p>
                 <div class="descricao2">
                     <!-- preço do produto -->
                     <div class="preco">R$: 12,00</div>
                     <div class="estoque">Em estoque</div>
-                    <button class="remove"type="url">Remover do carrinho</button></a>
+                    <button class="remove" type="url">Remover do carrinho</button></a>
                 </div>
             </div>
             <div class="item">
-                <img class="imgbox" src="../public/images/box.jpg">
+                <img class="imgbox" src="../images/box.jpg">
                 <!-- nome/descrição do produto -->
                 <p class="descricao">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
                     AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
@@ -303,41 +386,57 @@
                     <!-- preço do produto -->
                     <div class="preco">R$: 889,95</div>
                     <div class="estoque">Em estoque</div>
-                    <button class="remove"type="url">Remover do carrinho</button></a>
+                    <button class="remove" type="url">Remover do carrinho</button></a>
                 </div>
             </div>
             <div class="item">
-                <img class="imgbox" src="../public/images/box.jpg">
+                <img class="imgbox" src="../images/box.jpg">
                 <!-- nome/descrição do produto -->
-                <p class="descricao">Caixa da bookgear 0 livros,0 cases para 
+                <p class="descricao">Caixa da bookgear 0 livros,0 cases para
                     livros,0 marca paginas personalizado, 0 suportes para livros.</p>
                 <div class="descricao2">
                     <!-- preço do produto -->
                     <div class="preco">R$: 1257,02</div>
                     <div class="estoque">Em estoque</div>
-                    <button class="remove"type="url">Remover do carrinho</button></a>
+                    <button class="remove" type="url">Remover do carrinho</button></a>
                 </div>
             </div>
             <div class="item">
-                <img class="imgbox" src="../public/images/box.jpg">
+                <img class="imgbox" src="../images/box.jpg">
                 <!-- nome/descrição do produto -->
-                <p class="descricao"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, 
+                <p class="descricao"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit,
                     accusamus id nostrum consectetur ab quas nihil? Ducimus numquam nostrum,
-                     deleniti accusamus magnam unde explicabo maxime, rerum minima praesentium adipisci
-                      quos? Ex distinctio placeat nam eius earum corporis sit magnam, tempora fugit, 
-                      temporibus numquam aliquid. At similique sint nostrum corrupti eaque. Ipsa, est?</p>
+                    deleniti accusamus magnam unde explicabo maxime, rerum minima praesentium adipisci
+                    quos? Ex distinctio placeat nam eius earum corporis sit magnam, tempora fugit,
+                    temporibus numquam aliquid. At similique sint nostrum corrupti eaque. Ipsa, est?</p>
                 <div class="descricao2">
                     <!-- preço do produto -->
                     <div class="preco">R$: 76,55</div>
                     <div class="estoque">Em estoque</div>
-                    <button class="remove"type="url">Remover do carrinho</button></a>
+                    <button class="remove" type="url">Remover do carrinho</button></a>
                 </div>
             </div>
         </div>
 
-        <div class="compra">
-        </div>
+        <!-- valor da compra de todos os produtos -->
 
+        <div class="compra">
+            <div class="compra_div">
+                <div class="subtotal">Subtotal</div>
+                <div id="val_sub">R$: 2590,55</div>
+            </div>
+            <div class="compra_div">
+                <div class="subtotal">Frete</div>
+                <div id="val_sub">R$: 8999,99</div>
+            </div>
+            <div class="compra_div">
+                <div class="subtotal">Valor total</div>
+                <div id="val_sub">R$: 250,55</div>
+            </div>
+            <div class="compra_div">
+            <button class="finalizar_compra" type="url">Finalizar compra</button>
+        </div>
+        </div>
     </div>
 </body>
 
