Atualização do carrinho

--- a/views/carrinho.html
+++ b/views/carrinho.html
@@ -198,6 +198,9 @@
         justify-content: space-evenly;
     }
 
+    .compra_bot{
+        margin-top: 20px;
+    }
     .subtotal {
         display: flex;
         flex-flow: column-reverse;
@@ -241,10 +244,10 @@
     } */
     .finalizar_compra {
         width: 200px;
-        height: 40px;
+        height: 35px;
         border: none;
         border-radius: 20px;
-        color: rgb(48, 48, 48);
+        color: rgb(0, 0, 0);
         background: #f85d03;
         padding: 5px 20px;
         text-align: center;
@@ -433,7 +436,7 @@
                 <div class="subtotal">Valor total</div>
                 <div id="val_sub">R$: 250,55</div>
             </div>
-            <div class="compra_div">
+            <div class="compra_div compra_bot">
             <button class="finalizar_compra" type="url">Finalizar compra</button>
         </div>
         </div>
