--- a/views/cadastro.html
+++ b/views/cadastro.html
@@ -51,12 +51,13 @@
             margin-top: 15px;
             text-align: left;
         }
+
         .mini-box {
             display: inline-flex;
             flex-direction: row;
         }
 
-        .mini-box input{
+        .mini-box input {
             border-radius: 10px;
             background-color: #ff7300;
             color: rgb(34, 34, 34);
@@ -66,20 +67,23 @@
             text-decoration: none;
             display: inline-block;
             font: bold 17px sans-serif;
-            margin: 20px 0px 0px 60px;
+            margin: 20px 0px 0px 0px;
             cursor: pointer;
         }
 
-        .mini-box input:hover{
+        .mini-box input:hover {
             background-color: #d15e00;
         }
 
-        .forgot-password a:link , .forgot-password a:visited, .forgot-password {
+        .forgot-password a:link,
+        .forgot-password a:visited,
+        .forgot-password {
             margin-top: 20px;
             color: #ff7300;
             font: bold 17px sans-serif;
         }
-        .wrongpass{
+
+        .wrongpass {
             color: red;
             margin-top: 10px;
             display: none;
@@ -129,21 +133,21 @@
                 <p class="Login">Cadastro</p>
             </div>
 
-            <form action="/cadastro" method="post" name="cadastro" id="cadastro">
-                <input type="text" name="username" class="btn-username" placeholder="Nome">
-                <input type="email" name="email" class="btn-username" placeholder="E-mail">
+            <form onsubmit="verifyPassword()" method="#" name="cadastro" id="cadastro">
+                <input type="text" name="username" class="btn-username" placeholder="Nome" id="nome">
+                <input type="email" name="email" class="btn-username" placeholder="E-mail" id="email">
                 <input type="password" id="senha" name="password" class="btn-username" placeholder="Senha">
-                <p class="wrongpass">Senhas não coincidem</p>
                 <input type="password" id="confirmar" name="confirm" class="btn-username" placeholder="Confirmar senha">
-                <input type="text" name="address" class="btn-username" placeholder="Endereço">
+                <input id="address" type="text" name="address" class="btn-username" placeholder="Endereço">
+                <br>
+                <span id="message" style="color:red"> </span>
                 <br>
                 <div class="mini-box">
-                    <input type="submit" id="botao">
-                    <label for="cadastro">Cadastrar</label>
+                    <input type="submit" value="Cadastrar" id="botao">
                 </div>
             </form>
 
-            
+
 
             <div>
                 <p class="forgot-password">Já tem conta? <a href="/Login">Entrar</a></p>
@@ -151,14 +155,64 @@
         </div>
     </div>
     <script>
-        const senha = document.getElementById('senha');
-        const confirm = document.getElementById('confirmar');
+        const confirm = document.getElementById('confirmar').value;
         const wrongpass = document.querySelector('.wrongpass');
         const cadastro = document.getElementById('cadastro')
         const botao = document.getElementById('botao')
+        const nome = document.getElementById('nome').value;
+        const email = document.getElementById('email').value;
+        const address = document.getElementById('address').value;
         const urlparam = new URLSearchParams(window.location.search);
-        
-        
+
+
+        function verifyPassword() {
+            var pw = document.getElementById("senha").value;
+            //check empty password field  
+            var serversend = true;
+            if (pw == "") {
+                document.getElementById("message").innerHTML = "**Fill the password please!";
+                return serversend = false;
+            }
+
+            //minimum password length validation  
+            if (pw.length < 8) {
+                document.getElementById("message").innerHTML = "**Password length must be atleast 8 characters";
+                return serversend = false;
+            }
+
+            if (nome == "") {
+                document.getElementById("message").innerHTML = "**Fill the name please!";
+                return serversend = false;
+            }
+
+            if (email == "") {
+                document.getElementById("message").innerHTML = "**Fill the email please!";
+                return serversend = false;
+            }
+
+            if (address == "") {
+                document.getElementById("message").innerHTML = "**Fill the address please!";
+                return serversend = false;
+            }
+
+            //maximum length of password validation  
+            if (pw.length > 15) {
+                document.getElementById("message").innerHTML = "**Password length must not exceed 15 characters";
+                return serversend = false;
+            } 
+
+            if(pw != confirm){
+                document.getElementById("message").innerHTML = "**Senhas não coincidem";
+                return serversend = false;
+            } 
+            
+            
+            if(serversend === true) {
+                cadastro.setAttribute('method','post');
+                
+            }
+        };
+
     </script>
 </body>
 
