--- a/views/tela_usuario.html
+++ b/views/tela_usuario.html
@@ -46,16 +46,20 @@
 
 
         .principal {
-            background-color: rgba(42, 41, 43, 0.3);
-            box-shadow: 0px 0px 10px rgb(42, 41, 43);
+            background-color: rgba(42, 41, 43, 0.7);
             padding: 20px;
             padding-top: 30px;
-            height: 1000px;
-            width: 97%;
+            height: 80%;
+            width: 55%;
+            margin: 110px 0px 0px 20%;
             row-gap: 28px;
             justify-content: space-between;
             grid-template-columns: 250px 150px 150px 150px 150px;
             grid-auto-rows: 270px;
+        }
+        .insidebox{
+            background-color: #181818;
+            display: ;
         }
     </style>
 </head>
@@ -97,8 +101,9 @@
         </div>
     </header>
 
-    <div class="container principal">
-
+    <div class="principal">
+        <div class="insidebox"></div>
+        <p>teste</p>
     </div>
 
 </body>
