--- a/views/carrinho.html
+++ b/views/carrinho.html
@@ -59,7 +59,7 @@
         grid-template-columns: 900px;
         grid-auto-rows: 150px;
         padding-right: 15px;
-    
+
         overflow: scroll;
         overflow-x: hidden;
 
@@ -137,7 +137,6 @@
         text-align: center;
         font-size: 12px;
         font-weight: bold;
-        margin: 15px 2px;
         cursor: pointer;
     }
 
@@ -167,9 +166,59 @@
         font-size: larger;
         float: left;
         margin: auto;
-        color: whitesmoke;
+        color: rgb(245, 245, 245);
         grid-column: 3 / 4;
 
+    }
+    #total{
+        width:min-content;
+        width:auto;
+        align-items: flex-end;
+        font-size: 28px;
+    }
+    .Qtd_produtos{
+        display: flex;
+        justify-content: space-between;
+        height: 30px;
+        width: 175px;
+        font-size: medium;
+    }
+    #mais {
+        width: 20px;
+        height: 30px;
+        position: relative;
+        bottom: 5px;
+        padding-top: -50px;
+        border: none;
+        background: rgba(42, 41, 43, 0.0);
+    }
+
+    #menos {
+        width: 20px;
+        height: 30px;
+        position: relative;
+        bottom: 5px;
+        padding-top: -50px;
+        border: none;
+        background: rgba(42, 41, 43, 0.0);
+    }
+
+    #format {
+        width: 30px;
+        background-color: #888888;
+        border:none;
+        text-align: center;
+        color: rgb(48, 48, 48);
+    }
+    #Qtd{
+        display: inline-flex;
+        justify-content:space-around;
+        width: 80px;
+        height: 20px;
+        padding: 2px;
+        border: none 1px;
+        border-radius: 3px;
+        background-color: #888888;
     }
 
     .compra {
@@ -198,9 +247,10 @@
         justify-content: space-evenly;
     }
 
-    .compra_bot{
+    .compra_bot {
         margin-top: 20px;
     }
+
     .subtotal {
         display: flex;
         flex-flow: column-reverse;
@@ -223,7 +273,7 @@
         align-items: center;
         color: rgb(255, 255, 255);
     }
-/* 
+    /* 
     .finalizar_compra {
         width: 200px;
         height: 80px;
@@ -252,7 +302,7 @@
         padding: 5px 20px;
         text-align: center;
         font-size: 12px;
-        font-weight:bold;
+        font-weight: bold;
         margin: 15px 2px;
         cursor: pointer;
     }
@@ -265,16 +315,17 @@
     }
 
     .preco {
+        display: flex;
         width: 175px;
         height: 30px;
-        margin-top: 20px;
+        margin-top: 10px;
         align-items: flex-end;
         font-size: 28px;
 
     }
 
     .estoque {
-        margin: 10px;
+        margin: 5px;
         font-size: small;
         color: springgreen;
     }
@@ -328,10 +379,22 @@
                 <!-- nome/descrição do produto -->
                 <p class="descricao">Caixa da bookgear 4 livros, cases para livros, marca paginas personalizado, 3
                     suportes para livros.</p>
+
                 <div class="descricao2">
                     <!-- preço do produto -->
-                    <div class="preco">R$: 90,00</div>
+                    <div class="preco">R$: <input type="text" name="total" id="total" value="90,50" /></div>
                     <div class="estoque">Em estoque</div>
+
+                    <div class="Qtd_produtos">
+                        <p>Qtd:</p>
+                        <div id="Qtd">
+                            <input type="button" name="mais" id="mais" value="+" />
+                            <input type="text" name="format" value="0" id="format" size="2" />
+                            <input type="button" name="menos" id="menos" value="-" />
+                        </div>
+                        
+                    </div>
+                    
                     <button class="remove" type="url">Remover do carrinho</button></a>
                 </div>
             </div>
@@ -344,13 +407,27 @@
                     consequatur reprehenderit repellat asperiores delectus ipsam,
                     eveniet repudiandae temporibus impedit, aut quis tenetur
                     facere nesciunt illum quibusdam?.</p>
+
                 <div class="descricao2">
                     <!-- preço do produto -->
-                    <div class="preco">R$: 82,00</div>
+                    <div class="preco">R$: <input type="text" name="total" id="total" value="90,50" /></div>
                     <div class="estoque">Em estoque</div>
+
+                    <div class="Qtd_produtos">
+                        <p>Qtd:</p>
+                        <div id="Qtd">
+                            <input type="button" name="mais" id="mais" value="+" />
+                            <input type="text" name="format" value="0" id="format" size="2" />
+                            <input type="button" name="menos" id="menos" value="-" />
+                        </div>
+                        
+                    </div>
+                    
                     <button class="remove" type="url">Remover do carrinho</button></a>
                 </div>
             </div>
+
+
             <div class="item">
                 <img class="imgbox" src="../images/box.jpg">
                 <!-- nome/descrição do produto -->
@@ -358,13 +435,26 @@
                     adipisicing elit. Officia ab a qui tempore eius nulla et,
                     in ex fugiat autem. Nulla blanditiis aliquid, quae at
                     nostrum maiores qui quia est.</p>
-                <div class="descricao2">
-                    <!-- preço do produto -->
-                    <div class="preco">R$: 90,00</div>
-                    <div class="estoque">Em estoque</div>
-                    <button class="remove" type="url">Remover do carrinho</button></a>
+
+                    <div class="descricao2">
+                        <!-- preço do produto -->
+                        <div class="preco">R$: <input type="text" name="total" id="total" value="90,50" /></div>
+                        <div class="estoque">Em estoque</div>
+    
+                        <div class="Qtd_produtos">
+                            <p>Qtd:</p>
+                            <div id="Qtd">
+                                <input type="button" name="mais" id="mais" value="+" />
+                                <input type="text" name="format" value="0" id="format" size="2" />
+                                <input type="button" name="menos" id="menos" value="-" />
+                            </div>
+                            
+                        </div>
+                        
+                        <button class="remove" type="url">Remover do carrinho</button></a>
+                    </div>
                 </div>
-            </div>
+
             <div class="item">
                 <img class="imgbox" src="../images/box.jpg">
                 <!-- nome/descrição do produto -->
@@ -373,37 +463,76 @@
                     cases para livros, marca paginas personalizado, 3 suportes para
                     livros 4 livros, cases para livros, marca paginas personalizado,
                     3 suportes para livros</p>
+
                 <div class="descricao2">
                     <!-- preço do produto -->
-                    <div class="preco">R$: 12,00</div>
+                    <div class="preco">R$: <input type="text" name="total" id="total" value="90,50" /></div>
                     <div class="estoque">Em estoque</div>
+
+                    <div class="Qtd_produtos">
+                        <p>Qtd:</p>
+                        <div id="Qtd">
+                            <input type="button" name="mais" id="mais" value="+" />
+                            <input type="text" name="format" value="0" id="format" size="2" />
+                            <input type="button" name="menos" id="menos" value="-" />
+                        </div>
+                        
+                    </div>
+                    
                     <button class="remove" type="url">Remover do carrinho</button></a>
                 </div>
             </div>
+
             <div class="item">
                 <img class="imgbox" src="../images/box.jpg">
                 <!-- nome/descrição do produto -->
                 <p class="descricao">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
                     AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
+
                 <div class="descricao2">
                     <!-- preço do produto -->
-                    <div class="preco">R$: 889,95</div>
+                    <div class="preco">R$: <input type="text" name="total" id="total" value="90,50" /></div>
                     <div class="estoque">Em estoque</div>
+
+                    <div class="Qtd_produtos">
+                        <p>Qtd:</p>
+                        <div id="Qtd">
+                            <input type="button" name="mais" id="mais" value="+" />
+                            <input type="text" name="format" value="0" id="format" size="2" />
+                            <input type="button" name="menos" id="menos" value="-" />
+                        </div>
+                        
+                    </div>
+                    
                     <button class="remove" type="url">Remover do carrinho</button></a>
                 </div>
             </div>
+
             <div class="item">
                 <img class="imgbox" src="../images/box.jpg">
                 <!-- nome/descrição do produto -->
                 <p class="descricao">Caixa da bookgear 0 livros,0 cases para
                     livros,0 marca paginas personalizado, 0 suportes para livros.</p>
+
                 <div class="descricao2">
                     <!-- preço do produto -->
-                    <div class="preco">R$: 1257,02</div>
+                    <div class="preco">R$: <input type="text" name="total" id="total" value="90,50" /></div>
                     <div class="estoque">Em estoque</div>
+
+                    <div class="Qtd_produtos">
+                        <p>Qtd:</p>
+                        <div id="Qtd">
+                            <input type="button" name="mais" id="mais" value="+" />
+                            <input type="text" name="format" value="0" id="format" size="2" />
+                            <input type="button" name="menos" id="menos" value="-" />
+                        </div>
+                        
+                    </div>
+                    
                     <button class="remove" type="url">Remover do carrinho</button></a>
                 </div>
             </div>
+
             <div class="item">
                 <img class="imgbox" src="../images/box.jpg">
                 <!-- nome/descrição do produto -->
@@ -412,10 +541,22 @@
                     deleniti accusamus magnam unde explicabo maxime, rerum minima praesentium adipisci
                     quos? Ex distinctio placeat nam eius earum corporis sit magnam, tempora fugit,
                     temporibus numquam aliquid. At similique sint nostrum corrupti eaque. Ipsa, est?</p>
+
                 <div class="descricao2">
                     <!-- preço do produto -->
-                    <div class="preco">R$: 76,55</div>
+                    <div class="preco">R$: <input type="text" name="total" id="total" value="90,50" /></div>
                     <div class="estoque">Em estoque</div>
+
+                    <div class="Qtd_produtos">
+                        <p>Qtd:</p>
+                        <div id="Qtd">
+                            <input type="button" name="mais" id="mais" value="+" />
+                            <input type="text" name="format" value="0" id="format" size="2" />
+                            <input type="button" name="menos" id="menos" value="-" />
+                        </div>
+                        
+                    </div>
+                    
                     <button class="remove" type="url">Remover do carrinho</button></a>
                 </div>
             </div>
@@ -437,10 +578,28 @@
                 <div id="val_sub">R$: 250,55</div>
             </div>
             <div class="compra_div compra_bot">
-            <button class="finalizar_compra" type="url">Finalizar compra</button>
-        </div>
+                <button class="finalizar_compra" type="url">Finalizar compra</button>
+            </div>
         </div>
     </div>
 </body>
+<script type="text/javascript">
+    function id(el) {
+        return document.getElementById(el);
+    }
+    window.onload = function () {
+        id('mais').onclick = function () {
+            id('format').value = parseInt(id('format').value) + 1;
+            // Preco do produto
+            id('total').value = 90 * id('format').value;
+        }
+        id('menos').onclick = function () {
+            if (id('format').value > 0)
+                id('format').value = parseInt(id('format').value) - 1;
+
+            id('total').value = 90 * id('format').value;
+        }
+    }       
+</script>
 
 </html>
