--- a/views/Tela-principal_BookGear.html
+++ b/views/Tela-principal_BookGear.html
@@ -13,7 +13,7 @@
 </head>
 <style>
     body {
-        background-color: rgb(66, 66, 66);
+        background-color: rgb(37, 37, 37);
         background-image: url(../images/background2.jpg);
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -31,7 +31,7 @@
         width: 100%;
         grid-template-columns: 100px 400px 100px;
         grid-template-rows: 20px 25px 20px;
-        background-color: rgba(42, 41, 43, 0.9);
+        background-color: rgba(42, 41, 43, 0.8);
         box-shadow: 0px 0px 10px rgb(42, 41, 43);
     }
 
@@ -200,7 +200,7 @@
                     <li><a href="#">CAIXAS</a></li>
                     <li><a href="/carrinho">CARRINHO</a></li>
                     <li><a href="#">EDITORA</a></li>
-                    <li><a href="#">WISHLIST</a></li>
+                    <li><a href="/wishlist">WISHLIST</a></li>
                     <li><a href="#">AUTORES</a></li>
                 </ul>
             </nav>
@@ -215,35 +215,49 @@
             <img class="banner2 banner" src="../images/banner1.png" alt="banner">
         </div>
         <div class="container principal">
-            <div class="item item1">
-                <!-- Campo onde ficam os produtos -->
-                <img class="imgbox" src="../images/box.jpg">
-                <p class="descrição">Caixa da BookGear Lorem ipsum dolor sit amet consectetura</p>
-            </div>
-            <div class="item item2">
-                <img class="imgbox" src="../images/box.jpg">
-                <p class="descrição">Caixa da BookGear</p>
-            </div>
-            <div class="item item3">
-                <img class="imgbox" src="../images/box.jpg">
-                <p class="descrição">Caixa da BookGear</p>
-            </div>
-            <div class="item item4">
-                <img class="imgbox" src="../images/box.jpg">
-                <p class="descrição">Caixa da BookGear</p>
-            </div>
-            <div class="item item5">
-                <img class="imgbox" src="../images/box.jpg">
-                <p class="descrição">Caixa da BookGear</p>
-            </div>
-            <div class="item item6">
-                <img class="imgbox" src="../images/box.jpg">
-                <p class="descrição">Caixa da BookGear</p>
-            </div>
-            <div class="item item7">
-                <img class="imgbox" src="../images/box.jpg">
-                <p class="descrição">Caixa da BookGear</p>
-            </div>
+            <a href="/compre">
+                <div class="item item1">
+                    <!-- Campo onde ficam os produtos -->
+                    <img class="imgbox" src="../images/box.jpg">
+                    <p class="descrição">Caixa da BookGear Lorem ipsum dolor sit amet consectetura</p>
+                </div>
+            </a>
+            <a href="/compre">
+                <div class="item item2">
+                    <img class="imgbox" src="../images/box.jpg">
+                    <p class="descrição">Caixa da BookGear</p>
+                </div>
+            </a>
+            <a href="/compre">
+                <div class="item item3">
+                    <img class="imgbox" src="../images/box.jpg">
+                    <p class="descrição">Caixa da BookGear</p>
+                </div>
+            </a>
+            <a href="/compre">
+                <div class="item item4">
+                    <img class="imgbox" src="../images/box.jpg">
+                    <p class="descrição">Caixa da BookGear</p>
+                </div>
+            </a>
+            <a href="/compre">
+                <div class="item item5">
+                    <img class="imgbox" src="../images/box.jpg">
+                    <p class="descrição">Caixa da BookGear</p>
+                </div>
+            </a>
+            <a href="/compre">
+                <div class="item item6">
+                    <img class="imgbox" src="../images/box.jpg">
+                    <p class="descrição">Caixa da BookGear</p>
+                </div>
+            </a>
+            <a href="/compre">
+                <div class="item item7">
+                    <img class="imgbox" src="../images/box.jpg">
+                    <p class="descrição">Caixa da BookGear</p>
+                </div>
+            </a>
 
             <div class="categorias">
                 <h1>categorias</h1>
