--- a/views/cadastro.html
+++ b/views/cadastro.html
@@ -51,12 +51,13 @@
             margin-top: 15px;
             text-align: left;
         }
+
         .mini-box {
             display: inline-flex;
             flex-direction: row;
         }
 
-        .mini-box input{
+        .mini-box input {
             border-radius: 10px;
             background-color: #ff7300;
             color: rgb(34, 34, 34);
@@ -70,16 +71,19 @@
             cursor: pointer;
         }
 
-        .mini-box input:hover{
+        .mini-box input:hover {
             background-color: #d15e00;
         }
 
-        .forgot-password a:link , .forgot-password a:visited, .forgot-password {
+        .forgot-password a:link,
+        .forgot-password a:visited,
+        .forgot-password {
             margin-top: 20px;
             color: #ff7300;
             font: bold 17px sans-serif;
         }
-        .wrongpass{
+
+        .wrongpass {
             color: red;
             margin-top: 10px;
             display: none;
@@ -143,7 +147,7 @@
                 </div>
             </form>
 
-            
+
 
             <div>
                 <p class="forgot-password">Já tem conta? <a href="/Login">Entrar</a></p>
@@ -157,8 +161,8 @@
         const cadastro = document.getElementById('cadastro')
         const botao = document.getElementById('botao')
         const urlparam = new URLSearchParams(window.location.search);
-        
-        
+
+
     </script>
 </body>
 
