--- a/views/wishlist.html
+++ b/views/wishlist.html
@@ -12,7 +12,7 @@
 </head>
 <style>
     body {
-        background-color: rgb(20, 20, 20);
+        background-color: rgb(37, 37, 37);
         background-image: url(./../images/background2.jpg);
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -23,10 +23,10 @@
         display: grid;
         background-color: rgb(66, 66, 66);
         justify-content: space-evenly;
+        justify-content: center;
     }
 
     header {
-
         margin-bottom: 100px;
         width: 100%;
         grid-template-columns: 100px 400px 100px;
@@ -37,31 +37,30 @@
     }
 
     .principal {
-        margin-top: 100px;
         position: relative;
         bottom: 60px;
+        margin-top: 100px;
         background-color: rgba(255, 255, 255, 0);
         padding: 20px;
         padding-top: 30px;
         height: fit-content;
-        width: 97%;
         justify-content: space-between;
+        justify-content: center;
 
     }
 
     .grid {
         background-color: rgba(255, 255, 255, 0);
-        height: 500px;
-        width: 908px;
+        height: 690px;
+        width: 1310px;
         row-gap: 24px;
         border-radius: 4px;
         justify-content: space-between;
-        grid-template-columns: 900px;
+        grid-template-columns: 1300px;
         grid-auto-rows: 150px;
         padding-right: 15px;
         overflow: scroll;
         overflow-x: hidden;
-
     }
 
     .pesquisa {
@@ -121,7 +120,7 @@
         justify-content: center;
         font-family: 'Verdana', Courier, monospace;
         text-align: center;
-        grid-template-columns: 150px 555px 195px;
+        grid-template-columns: 150px 952px 195px;
         grid-template-rows: 150px;
         transition: 0.5s ease;
 
@@ -148,7 +147,7 @@
 
     .descricao {
         height: 125px;
-        width: 500px;
+        width: 800px;
         word-wrap: break-word;
         overflow: hidden;
         text-align: left;
@@ -175,14 +174,6 @@
         width: auto;
         align-items: flex-end;
         font-size: 28px;
-    }
-
-    .Qtd_produtos {
-        display: flex;
-        justify-content: space-between;
-        height: 30px;
-        width: 175px;
-        font-size: medium;
     }
 
     #mais {
@@ -230,7 +221,6 @@
         background-color: rgba(42, 41, 43, 0.8);
         box-shadow: 0px 0px 3px rgb(42, 41, 43);
         border-radius: 4px;
-        margin-left: 15px;
         left: 950px;
         grid-row: 1 / 2;
         grid-column: 2 / 3;
@@ -276,47 +266,6 @@
         font-size: 28px;
         align-items: center;
         color: rgb(255, 255, 255);
-    }
-
-    /* 
-    .finalizar_compra {
-        width: 200px;
-        height: 80px;
-        font-size:xx-large;
-        border: none;
-        border-radius: 20px;
-        color: rgb(0, 0, 0);
-        background: #f85d03;
-        font-size: 12px;
-        font-weight: bolder;
-        margin: 15px 2px;
-        cursor: pointer;
-    }
-    .finalizar_compra:hover{
-        color: rgb(0, 0, 0);
-        background: #da5000;
-        cursor: pointer;
-    } */
-    .finalizar_compra {
-        width: 200px;
-        height: 35px;
-        border: none;
-        border-radius: 20px;
-        color: rgb(0, 0, 0);
-        background: #f85d03;
-        padding: 5px 20px;
-        text-align: center;
-        font-size: 12px;
-        font-weight: bold;
-        margin: 15px 2px;
-        cursor: pointer;
-    }
-
-    .finalizar_compra:hover {
-        color: #080808;
-        background: #da5000;
-        text-align: center;
-        cursor: pointer;
     }
 
     .preco {
@@ -366,7 +315,7 @@
                 <ul>
                     <li><a href="#">LIVROS</a></li>
                     <li><a href="#">CAIXAS</a></li>
-                    <li><a href="#">CARRINHO</a></li>
+                    <li><a href="/carrinho">CARRINHO</a></li>
                     <li><a href="#">EDITORA</a></li>
                     <li><a href="#">WISHLIST</a></li>
                     <li><a href="#">AUTORES</a></li>
@@ -390,17 +339,10 @@
                     <div class="preco">R$: <input type="text" name="total" id="total" value="90,50" /></div>
                     <div class="estoque">Em estoque</div>
 
-                    <div class="Qtd_produtos">
-                        <p>Qtd:</p>
-                        <div id="Qtd">
-                            <input type="button" name="mais" id="mais" value="+" />
-                            <input type="text" name="format" value="0" id="format" size="2" />
-                            <input type="button" name="menos" id="menos" value="-" />
-                        </div>
 
-                    </div>
 
-                    <button class="remove" type="url">Remover do carrinho</button></a>
+                    <button class="remove" type="url">Remover da wishlist</button>
+                    <button class="remove" type="url">Adicionar ao carrinho</button>
                 </div>
             </div>
 
@@ -418,17 +360,9 @@
                     <div class="preco">R$: <input type="text" name="total" id="total" value="90,50" /></div>
                     <div class="estoque">Em estoque</div>
 
-                    <div class="Qtd_produtos">
-                        <p>Qtd:</p>
-                        <div id="Qtd">
-                            <input type="button" name="mais" id="mais" value="+" />
-                            <input type="text" name="format" value="0" id="format" size="2" />
-                            <input type="button" name="menos" id="menos" value="-" />
-                        </div>
 
-                    </div>
 
-                    <button class="remove" type="url">Remover do carrinho</button></a>
+                    <button class="remove" type="url">Remover da wishlist</button></a>
                 </div>
             </div>
 
@@ -446,17 +380,9 @@
                     <div class="preco">R$: <input type="text" name="total" id="total" value="90,50" /></div>
                     <div class="estoque">Em estoque</div>
 
-                    <div class="Qtd_produtos">
-                        <p>Qtd:</p>
-                        <div id="Qtd">
-                            <input type="button" name="mais" id="mais" value="+" />
-                            <input type="text" name="format" value="0" id="format" size="2" />
-                            <input type="button" name="menos" id="menos" value="-" />
-                        </div>
 
-                    </div>
 
-                    <button class="remove" type="url">Remover do carrinho</button></a>
+                    <button class="remove" type="url">Remover da wishlist</button></a>
                 </div>
             </div>
 
@@ -474,17 +400,8 @@
                     <div class="preco">R$: <input type="text" name="total" id="total" value="90,50" /></div>
                     <div class="estoque">Em estoque</div>
 
-                    <div class="Qtd_produtos">
-                        <p>Qtd:</p>
-                        <div id="Qtd">
-                            <input type="button" name="mais" id="mais" value="+" />
-                            <input type="text" name="format" value="0" id="format" size="2" />
-                            <input type="button" name="menos" id="menos" value="-" />
-                        </div>
 
-                    </div>
-
-                    <button class="remove" type="url">Remover do carrinho</button></a>
+                    <button class="remove" type="url">Remover da wishlist</button></a>
                 </div>
             </div>
 
@@ -499,17 +416,9 @@
                     <div class="preco">R$: <input type="text" name="total" id="total" value="90,50" /></div>
                     <div class="estoque">Em estoque</div>
 
-                    <div class="Qtd_produtos">
-                        <p>Qtd:</p>
-                        <div id="Qtd">
-                            <input type="button" name="mais" id="mais" value="+" />
-                            <input type="text" name="format" value="0" id="format" size="2" />
-                            <input type="button" name="menos" id="menos" value="-" />
-                        </div>
 
-                    </div>
 
-                    <button class="remove" type="url">Remover do carrinho</button></a>
+                    <button class="remove" type="url">Remover da wishlist</button></a>
                 </div>
             </div>
 
@@ -524,17 +433,9 @@
                     <div class="preco">R$: <input type="text" name="total" id="total" value="90,50" /></div>
                     <div class="estoque">Em estoque</div>
 
-                    <div class="Qtd_produtos">
-                        <p>Qtd:</p>
-                        <div id="Qtd">
-                            <input type="button" name="mais" id="mais" value="+" />
-                            <input type="text" name="format" value="0" id="format" size="2" />
-                            <input type="button" name="menos" id="menos" value="-" />
-                        </div>
 
-                    </div>
 
-                    <button class="remove" type="url">Remover do carrinho</button></a>
+                    <button class="remove" type="url">Remover da wishlist</button></a>
                 </div>
             </div>
 
@@ -552,61 +453,31 @@
                     <div class="preco">R$: <input type="text" name="total" id="total" value="90,50" /></div>
                     <div class="estoque">Em estoque</div>
 
-                    <div class="Qtd_produtos">
-                        <p>Qtd:</p>
-                        <div id="Qtd">
-                            <input type="button" name="mais" id="mais" value="+" />
-                            <input type="text" name="format" value="0" id="format" size="2" />
-                            <input type="button" name="menos" id="menos" value="-" />
-                        </div>
 
-                    </div>
 
-                    <button class="remove" type="url">Remover do carrinho</button></a>
+                    <button class="remove" type="url">Remover da wishlist</button></a>
                 </div>
             </div>
         </div>
 
-        <!-- valor da compra de todos os produtos -->
+        <script type="text/javascript">
+            format = 1;
+            function id(el) {
+                return document.getElementById(el);
+            }
+            window.onload = function () {
+                id('mais').onclick = function () {
+                    id('format').value = parseInt(id('format').value) + 1;
+                    // Preco do produto
+                    id('total').value = 90 * id('format').value;
+                }
+                id('menos').onclick = function () {
+                    if (id('format').value > 0)
+                        id('format').value = parseInt(id('format').value) - 1;
 
-        <div class="compra">
-            <div class="compra_div">
-                <div class="subtotal">Subtotal</div>
-                <div id="val_sub">R$: 2590,55</div>
-            </div>
-            <div class="compra_div">
-                <div class="subtotal">Frete</div>
-                <div id="val_sub">R$: 8999,99</div>
-            </div>
-            <div class="compra_div">
-                <div class="subtotal">Valor total</div>
-                <div id="val_sub">R$: 250,55</div>
-            </div>
-            <div class="compra_div compra_bot">
-                <button class="finalizar_compra" type="url">Finalizar compra</button>
-            </div>
-        </div>
-    </div>
-</body>
-
-
-<script type="text/javascript">
-    function id(el) {
-        return document.getElementById(el);
-    }
-    window.onload = function () {
-        id('mais').onclick = function () {
-            id('format').value = parseInt(id('format').value) + 1;
-            // Preco do produto
-            id('total').value = 90 * id('format').value;
-        }
-        id('menos').onclick = function () {
-            if (id('format').value > 0)
-                id('format').value = parseInt(id('format').value) - 1;
-
-            id('total').value = 90 * id('format').value;
-        }
-    }       
-</script>
+                    id('total').value = 90 * id('format').value;
+                }
+            }       
+        </script>
 
 </html>
