--- a/views/carrinho.html
+++ b/views/carrinho.html
@@ -96,7 +96,7 @@
     }
 
     .ul {
-        color: white;
+        color: rgb(158, 158, 158);
         padding: 20px;
     }
 
@@ -130,8 +130,8 @@
     .remove {
         border: none;
         border-radius: 3px;
-        color: rgb(48, 48, 48);
-        background: #888888;
+        color: rgb(158, 158, 158);
+        background: #3d3d3d;
         padding: 5px 25px;
         text-align: center;
         font-size: 12px;
@@ -140,8 +140,8 @@
     }
 
     .remove:hover {
-        color: #080808;
-        background: #6b6b6b;
+        color: rgb(158, 158, 158);
+        background: #464646;
         text-align: center;
         cursor: pointer;
     }
@@ -156,7 +156,6 @@
         margin: auto;
         color: rgb(179, 179, 179);
         grid-column: 2 / 3;
-        white-space: normal;
     }
 
     .descricao2 {
@@ -207,10 +206,10 @@
 
     #format {
         width: 30px;
-        background-color: #888888;
+        background: #3d3d3d;
         border: none;
         text-align: center;
-        color: rgb(48, 48, 48);
+        color: rgb(158, 158, 158);
     }
 
     #Qtd {
@@ -221,7 +220,7 @@
         padding: 2px;
         border: none 1px;
         border-radius: 3px;
-        background-color: #888888;
+        background: #3d3d3d;;
     }
 
     .compra {
