--- a/views/wishlist.html
+++ b/views/wishlist.html
@@ -129,8 +129,8 @@
     .remove {
         border: none;
         border-radius: 3px;
-        color: rgb(48, 48, 48);
-        background: #888888;
+        color: rgb(158, 158, 158);
+        background: #363636;
         padding: 5px 25px;
         text-align: center;
         font-size: 12px;
@@ -139,8 +139,28 @@
     }
 
     .remove:hover {
-        color: #080808;
-        background: #6b6b6b;
+        color: rgb(158, 158, 158);
+        background: #464646;
+        text-align: center;
+        cursor: pointer;
+    }
+
+    .adicionar {
+        border: none;
+        border-radius: 3px;
+        color: rgb(158, 158, 158);
+        background: #3d3d3d;
+        margin-top: 12px;
+        padding: 5px 21px;
+        text-align: center;
+        font-size: 12px;
+        font-weight: bold;
+        cursor: pointer;
+    }
+
+    .adicionar:hover {
+        color: rgb(158, 158, 158);
+        background: #464646;
         text-align: center;
         cursor: pointer;
     }
@@ -342,7 +362,7 @@
 
 
                     <button class="remove" type="url">Remover da wishlist</button>
-                    <button class="remove" type="url">Adicionar ao carrinho</button>
+                    <button class="adicionar" type="url">Adicionar ao carrinho</button>
                 </div>
             </div>
 
