Mensagem de erro em cadastro finalizada

--- a/views/Tela-principal_BookGear.html
+++ b/views/Tela-principal_BookGear.html
@@ -50,11 +50,6 @@
 
     }
 
-    .banner1 {}
-
-    .banner2 {}
-
-
     .pesquisa {
         justify-content: center;
         border: solid 2px whitesmoke;
@@ -188,12 +183,12 @@
         <div class="cabecalho">
             <nav>
                 <ul>
-                    <li><a href="#">LIVROS</a></li>
+                    <li><a href="/">HOME</a></li>
                     <li><a href="#">CAIXAS</a></li>
-                    <li><a href="#">CARRINHO</a></li>
-                    <li><a href="#">EDITORA</a></li>
-                    <li><a href="#">WISHLIST</a></li>
                     <li><a href="/user">AUTORES</a></li>
+                    <li><a href="#">EDITORA</a></li>
+                    <li><a href="/compre">WISHLIST</a></li>
+                    <li><a href="/carrinho">CARRINHO</a></li>
                 </ul>
             </nav>
         </div>
@@ -237,8 +232,13 @@
                 <p class="descrição">Caixa da BookGear</p>
             </div>
 
+            <div class="item item8">
+                <img class="imgbox" src="../images/box.jpg">
+                <p class="descrição">Caixa da BookGear</p>
+            </div>
+
             <div class="categorias">
-                <h1>categorias</h1>
+                <h1>Categorias</h1>
                 <ul class="categorias">
                     <li><button type="url" href="#" class="input_categoria">Ação</button></li>
                     <li><button type="url" href="#" class="input_categoria">Aventura</button></li>
