--- a/views/cabecalho.html
+++ b/views/cabecalho.html
@@ -59,21 +59,21 @@
 
 
         <div class="user">
-            <a href="Login-bookgear.html">
+            <a href="/Login">
                 <button type="url" class="botao">Entrar</button></a>
-            <a class="login" href="#">
+            <a class="login" href="/cadastro">
                 <button type="url" class="botao">Cadastrar</button></a>
         </div>
     </div>
     <div class="cabecalho">
         <nav>
             <ul>
-                <li><a href="#">LIVROS</a></li>
+                <li><a href="/">HOME</a></li>
                 <li><a href="#">CAIXAS</a></li>
-                <li><a href="#">CARRINHO</a></li>
+                <li><a href="#">AUTORES</a></li>
                 <li><a href="#">EDITORA</a></li>
                 <li><a href="#">WISHLIST</a></li>
-                <li><a href="#">AUTORES</a></li>
+                <li><a href="/carrinho">CARRINHO</a></li>
             </ul>
         </nav>
     </div>
