--- a/views/tela_usuario.html
+++ b/views/tela_usuario.html
@@ -59,7 +59,7 @@
         }
         .insidebox{
             background-color: #181818;
-            display: ;
+            display: flex;
         }
     </style>
 </head>
@@ -90,12 +90,12 @@
         <div class="cabecalho">
             <nav>
                 <ul>
-                    <li><a href="#">LIVROS</a></li>
+                    <li><a href="/">HOME</a></li>
                     <li><a href="#">CAIXAS</a></li>
-                    <li><a href="#">CARRINHO</a></li>
+                    <li><a href="/user">AUTORES</a></li>
                     <li><a href="#">EDITORA</a></li>
                     <li><a href="#">WISHLIST</a></li>
-                    <li><a href="/user">AUTORES</a></li>
+                    <li><a href="/carrinho">CARRINHO</a></li>
                 </ul>
             </nav>
         </div>
