--- a/views/Login-bookgear.html
+++ b/views/Login-bookgear.html
@@ -90,6 +90,12 @@
         .mini-box input:active {
             background-color: #d15e00;
         }
+
+        .wrongpass {
+            color: red;
+            margin-top: 10px;
+            display: none;
+        }
     </style>
 </head>
 
@@ -103,8 +109,7 @@
             </div>
             <div class="search-box">
                 <input type="text" placeholder="Pesquisar">
-                <a href="#" class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                        fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                <a href="#" class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                         <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
                     </svg></a>
             </div>
@@ -120,12 +125,12 @@
         <div class="cabecalho">
             <nav>
                 <ul>
-                    <li><a href="#">LIVROS</a></li>
+                    <li><a href="/">HOME</a></li>
                     <li><a href="#">CAIXAS</a></li>
-                    <li><a href="#">CARRINHO</a></li>
+                    <li><a href="#">AUTORES</a></li>
                     <li><a href="#">EDITORA</a></li>
                     <li><a href="#">WISHLIST</a></li>
-                    <li><a href="#">AUTORES</a></li>
+                    <li><a href="/carrinho">CARRINHO</a></li>
                 </ul>
             </nav>
         </div>
@@ -136,16 +141,17 @@
                 <p class="Login">Login</p>
             </div>
             <form action="/Login" method="post" name="form">
-                <input type="text" name="name" id="name" class="btn-username" placeholder="Nome de usuário">
+                <input type="text" name="name" id="name" class="btn-username" placeholder="Nome de usuário" required>
 
-                <input type="password" id="senha" name="senha" class="btn-username" placeholder="Senha"> <br>
-                
+                <input type="password" id="senha" name="senha" class="btn-username" placeholder="Senha" required> <br>
+                <span id="message" style="color:red"></span>
                 <div class="mini-box">
                     <input type="submit" placeholder="Entrar">
                     <a href="/cadastro">Cadastrar</a>
                 </div>
             </form>
                 <p class="forgot-password"><a href="#">Esqueceu a senha?</a></p>     
+                
         </div>
     </div>
 
